# LMS/DTOs/Tokens.cs
@@ -1,0 +1,15 @@
+﻿namespace LMS.DTOs
+{
+    public class TokenRequest
+    {
+        public string accessToken { get; set; }
+        public string refreshToken { get; set; }
+    }
+
+    public class TokenResponse
+    {
+        public string accessToken { get; set; }
+        public string refreshToken { get; set; }
+    }
+
+}
